tests/baselines/reference/augmentedTypesEnum3.errors.txt
augmentedTypesEnum3.ts(9,8): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum3.ts(12,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum3.ts(15,6): error TS2567: Enum declarations can only merge with namespace declarations.


==== augmentedTypesEnum3.ts (3 errors) ====
    module E {
        var t;
    }
    enum E { }
    
    enum F { }
    module F { var t; }
    
    module A {
           ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
        var o;
    }
    enum A {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
        b
    }
    enum A {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
        c
    }
    module A {
        var p;
    }